Add more PermGen